Add css mpdules support

--- a/frontend/src/pages/About/index.module.css
+++ b/frontend/src/pages/About/index.module.css
@@ -1,5 +1,10 @@
-.home {
+.about {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+}
+
+.label {
+  font-size: 10px;
+  color: green;
 }
