--- a/frontend/src/pages/Home/index.module.css
+++ b/frontend/src/pages/Home/index.module.css
@@ -2,9 +2,11 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  padding: 50px;
 }
 
-.label {
-  font-size: 10px;
-  color: red;
+.downloadInputContainer {
+  margin-bottom: 50px;
 }
+
+.downloadsContainer {}
